# NexusLauncher

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  README_en.md  RELEASE.md  todo_list.md
.github/workflows/: auto_assign_reviewer.yml  ci.yml  commit_lint.yml  release.yml
docs/: architecture.md
docs/arch/: overview.md
docs/arch/auth/: auth.md  models.md  storage.md
docs/arch/cli/: cli.md
docs/arch/config/: config.md  models.md  persistence.md
docs/arch/core/: core.md
docs/arch/java/: java.md
docs/arch/launch/: launch.md  launcher.md  models.md
docs/arch/loader/: fabric.md  loader.md
docs/arch/main/: main.md
docs/arch/version/: download.md  models.md  source.md
nexus-auth/: Cargo.toml
nexus-auth/src/: lib.rs  models.rs  storage.rs  utils.rs
nexus-cli/: Cargo.toml
nexus-cli/src/: cli.rs
nexus-config/: Cargo.toml
nexus-config/src/: config.rs  launchconfig.rs  lib.rs  models.rs  models_tests.rs  userconfig.rs
nexus-core/: Cargo.toml
nexus-core/src/: lib.rs  lib_tests.rs
nexus-java/: Cargo.toml
nexus-java/src/: java.rs  lib.rs
nexus-launch/: Cargo.toml
nexus-launch/src/: launcher.rs  models.rs
nexus-list/: Cargo.toml
nexus-list/src/: lib.rs
nexus-loader/: Cargo.toml
nexus-loader/src/: fabric.rs  lib.rs  models.rs
nexus-main/: Cargo.toml
nexus-main/src/: main.rs
nexus-mods/: Cargo.toml
nexus-mods/src/: api.rs  api_tests.rs  lib.rs  models.rs
nexus-search/: Cargo.toml
nexus-search/src/: lib.rs
nexus-uninstall/: Cargo.toml
nexus-uninstall/src/: lib.rs
nexus-version/: Cargo.toml
nexus-version/src/: download.rs  lib.rs  source.rs  source_tests.rs
scripts/: check.sh  check_commits.sh  generate_todo.sh  get_involved.sh  get_reviewers.sh  setup_hooks.sh  test.sh
src/: cli.rs  config.rs  java.rs  launch.rs  main.rs
src/auth/: mod.rs  models.rs  storage.rs  utils.rs
src/config/: config.rs  launchconfig.rs  mod.rs  models.rs  nexus_config.rs  userconfig.rs
src/launch/: launcher.rs  models.rs
src/loader/: fabric.rs  mod.rs  models.rs
src/mode/: models.rs
src/mods/: mod.rs  models.rs
src/version/: download.rs  mod.rs  models.rs  source.rs  utils.rs
