[package]
name = "nexus-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-core = {path = "../nexus-core"}
nexus-version = {path = "../nexus-version"}
nexus-cli = {path = "../nexus-cli"}
nexus-config = {path = "../nexus-config"}


clap = {workspace = true}
serde = {workspace = true}
aes-gcm = {workspace = true}
sha2 = {workspace = true}
reqwest = {workspace = true}
machine-uid = {workspace = true}
tracing = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
