[package]
name = "nexus-config"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-core = {path = "../nexus-core"}
nexus-version = {path = "../nexus-version"}
nexus-cli = {path = "../nexus-cli"}

serde = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
toml = {workspace = true}
