[package]
name = "nexus-list"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-core = { path = "../nexus-core" }
nexus-config = { path = "../nexus-config" }
nexus-loader = { path = "../nexus-loader" }
nexus-version = { path = "../nexus-version" }
nexus-cli = { path = "../nexus-cli" }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
