[package]
name = "nexus-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-core = {path = "../nexus-core"}
nexus-version = {path = "../nexus-version"}
nexus-cli = {path = "../nexus-cli"}

serde_json = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
reqwest =  {workspace = true}
serde = {workspace = true}
