[package]
name = "nexus-main"
version = "0.1.0"
edition = "2024"

[dependencies]
nexus-core = {path = "../nexus-core"}
nexus-version = {path = "../nexus-version"}
nexus-cli = {path = "../nexus-cli"}
nexus-auth = {path = "../nexus-auth"}
nexus-config = {path = "../nexus-config"}
nexus-java = {path = "../nexus-java"}
nexus-mods = {path = "../nexus-mods"}
nexus-loader = {path = "../nexus-loader"}
nexus-launch = {path = "../nexus-launch"}

tokio = {workspace = true}
tracing-subscriber = {workspace = true}
clap = {workspace = true}
tracing = {workspace = true}
serde_json = {workspace = true}
walkdir = {workspace = true}
