[package]
name = "nexus-version"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
reqwest = {workspace = true}
home = {workspace = true}
tokio = {workspace = true}
futures-util = {workspace = true}
indicatif = {workspace = true}
sha-1 = {workspace = true}
hex = {workspace = true}
